infrastructure/terraform/modules/eks/eks-addons/game2048/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-2048
  namespace: game-2048
spec:
  hosts:
    - "*"
  gateways:
    - gateway-2048
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: service-2048
            port:
              number: 80
